# a2aserver

./: .gitignore  DEPLOYMENT.md  DNS_SETUP.md  INVALID_HOST_HEADER_FIX.md  NFT_METADATA_URL_FIX.md  NGINX_SETUP.md  PRODUCTION_DEPLOYMENT.md  TIMESTAMP_FIX.md  api for frontend.md  server_config.json  setup_nginx.sh  start_dev_frontend.sh  start_production_frontend.sh
server/: .env copy  API_DOCS_README.md  api-load-test.py  api_docs.py  init_mysql.py  main.py  mock_remote_agent_with_header.py  multi_user_implementation.md  openapi.yaml  package-lock.json  package.json  pyproject.toml  start.sh  test_muti_user.py  test_solana_import.py
server/common/: types.py
server/components/: poller.py
server/samples/: WEBSOCKET_README.md  websocket_client_example.html
server/service/: solana_README.md  solana_client.py  solana_example.py  solana_pda_helper.py  types.py
server/service/server/: adk_host_manager.py  evn_example  server.py  user_session_manager.py  websocket_manager.py
server/state/: host_agent_service.py  state.py
server/utils/: agent_card.py  solana_verifier.py
server/utils/idl/: agent_nft_market.json
server/vue-frontend/: .eslintrc.js  README.md  VERCEL_DEPLOYMENT.md  package-lock.json  package.json  vercel.json  vue.config.js
server/vue-frontend/public/: index.html  solana-web3.js
server/vue-frontend/src/: App.vue  main.ts  shims-vue.d.ts
server/vue-frontend/src/components/: ApiKeyDialog.vue  ApiUrlConfig.vue  NftMetadataViewer.vue  PhantomWallet.vue
server/vue-frontend/src/config/: env.ts
server/vue-frontend/src/router/: index.ts
(+31 files in other folders)
